# CosmoGasVision

./: .agents.dvc  .docs.dvc  .dvcignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docs.dvc  paper_cvpr.dvc  pyproject.toml  restart_mlflow.sh  test_mlflow.py
.claude/: settings.json
.dvc/: config
cloud_runs/: stage1a-1b-skiprich-203337-verdict.json
scripts/: audit_rho_log_surrogate_validation.py  audit_tepper_garcia_validity.py  build_and_push_ecr.sh  check_local_gpu.ps1  check_local_gpu.sh  compute_d56_gate5_stats.py  compute_mvsk_baseline_sprint4.py  compute_rho_emp_sprint4.py  configure_s3_lifecycle.sh  d46_50step_host_smoke.py  d46_5step_memory_smoke.py  d50_timing_gate.py  d62_3_fgpa_variance_spectrum.py  d69_lr_sensitivity_probe.py  d69_m3_band_calibration.py  d70_m0_frozen_init_baseline.py  d70_preflight_A_dying_relu.py  d70_preflight_C_relu_trajectory.py  d70_preflight_D_operative_cause_swap.py  d70_sigma_redraw_control.py  d70_stage1a_import_mlflow.py  d70_wilcoxon_gate.py  d71_I_angled_feasibility_preflight.py  d71_I_grad_norm_saturation.py  d71_compute_var_truth_smoothing_floor.py  d73_a4_wiener_baseline.py  d73_a4prime_wiener_baseline.py  d73_a7_control_recompute.py  d73_k2_verification_battery.py  d73_make_closeout_figures.py  d73_pf_sharpener.py  d73_xi_host_consumer.py  d75_corrected_metric_rescore.py  diag_find_dla_p2.py  diag_pf_per_bin.py  diag_tau_filehalf.py  diag_tau_filehalf_ensemble.py  diag_tau_max_sensitivity.py  diag_velocity_gradient_smoke.py  eval_anchor_invariance_d34.py  (+51 more)
src/: export.py
tests/: test_cic_chunked.py  (+44 more)
(+327 files in other folders)
